--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -31,21 +31,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_keyboard_arrow_left_24"
-        app:tint="@color/white" />
+        />
 
-    <ImageView
-        android:id="@+id/favBtn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/circle_bg"
-        android:contentDescription="@string/favbtnimage"
-        android:padding="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_favorite_border_24"
-        app:tint="@color/white" />
+<!--    <ImageView-->
+<!--        android:id="@+id/favBtn"-->
+<!--        android:layout_width="48dp"-->
+<!--        android:layout_height="48dp"-->
+<!--        android:layout_marginTop="48dp"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:background="@drawable/circle_bg"-->
+<!--        android:contentDescription="@string/favbtnimage"-->
+<!--        android:padding="12dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:srcCompat="@drawable/ic_favorite_border_24"-->
+<!--        app:tint="@color/white" />-->
 
     <ImageView
         android:id="@+id/imageAlbumArtPlayer"
@@ -56,7 +56,7 @@
         android:contentDescription="@string/avatarimage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/favBtn"
+        app:layout_constraintTop_toBottomOf="@+id/backBtn"
         android:background="@drawable/circle_bg" />
 
     <TextView
@@ -67,6 +67,7 @@
         android:text="@string/title"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/bgAlbumArt"
@@ -80,6 +81,7 @@
         android:text="@string/artist"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +91,7 @@
     <com.frolo.waveformseekbar.WaveformSeekBar
         android:id="@+id/waveformSeekBar"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
