background services added and notification added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#3617c9</color>
     <color name="green">#15c55d</color>
+    <color name="yellow">#FFC107</color>
 </resources>
