--- a/app/src/main/res/drawable/white_circle_bg.xml
+++ b/app/src/main/res/drawable/white_circle_bg.xml
@@ -2,7 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="oval">
-        <solid android:color="@color/white"/>
+        <gradient android:startColor="#FFC107"
+            android:endColor="#FFEB3B"
+            android:angle="-180"/>
     </shape>
 </item>
 </selector>
