--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -160,7 +160,8 @@
             android:layout_marginEnd="24dp"
             android:background="@drawable/white_circle_bg"
             android:contentDescription="@string/play_btn_image"
-            app:srcCompat="@drawable/ic_play_arrow_24" />
+            app:srcCompat="@drawable/ic_play_arrow_24"
+            app:tint="@color/white" />
 
         <ImageButton
             android:id="@+id/buttonNext"
